# Bone-Registration

./: CMakeLists.txt  README.md  cloud_rectangle_1.90.ply  cloud_tiny_weight_1.9.ply  cloud_tiny_weight_1.90.ply  main  mesh1cube.stl  sdf_read  stl_loader  triangle_test
include/: hash_map.h  mat.h  triangle.h
include/GradientSDF/: MapGradPixelSdf.cpp  MapGradPixelSdf.h  Sdf.h  SdfVoxel.h
include/MeshLoader/: meshSTLLoader.h
include/mesh/: LayeredMarchingCubesNoColor.h
main.dSYM/Contents/Resources/Relocations/aarch64/: main.yml
sdf_1cube_data/: grid_info.txt  sdf_d.txt  sdf_n0.txt  sdf_n1.txt  sdf_n2.txt  sdf_weight.txt
sdf_reading.dSYM/Contents/: Info.plist
sdf_reading.dSYM/Contents/Resources/Relocations/aarch64/: sdf_reading.yml
src/: main.cpp  sdf_reading.cpp  test.cpp
